--- a/jupiter.ipynb
+++ b/jupiter.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n"
+     ]
     }
    ],
    "source": [
+    "def mod(x):\n",
+    "    return x**2\n",
     "\n",
-    "\n"
+    "x = [4, 6, 1, 65, 2, 87, 12, 3, 88, 2, 123, 0, -4, -3, -1]\n",
+    "\n",
+    "x.sort(key=mod)\n"
    ]
   }
  ],
